--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,16 @@
 			<artifactId>docopt</artifactId>
 			<version>0.6.0.20150202</version>
 		</dependency>
+		<dependency>
+			<groupId>com.atlassian.commonmark</groupId>
+			<artifactId>commonmark</artifactId>
+			<version>0.16.1</version>
+		</dependency>
+		<dependency>
+			<groupId>com.atlassian.commonmark</groupId>
+			<artifactId>commonmark-ext-gfm-tables</artifactId>
+			<version>0.16.1</version>
+		</dependency>
 	</dependencies>
 
 	<build>
