initial conversion to gradle + cleanup kotlin and unused params

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 target/
 deploy/
 .idea/
+.gradle/
 *.iml
 .DS_Store
 input/
@@ -8,3 +9,7 @@ output/
 data/
 test.csv
 test.sorbet
+build/
+gradlew
+gradlew.bat
+gradle/
